crates/psptool-ops/tests/snapshots/list_micro__list_default_empty_directories.snap
---
source: crates/psptool-ops/tests/list_micro.rs
expression: list_default(&rom)
---
+-----+------+-----------+---------+---------------+
| ROM | Addr |   Size    |   FET   |     AGESA     |
+-----+------+-----------+---------+---------------+
|  0  | 0x0  | 0x1000000 | 0x20000 | AGESA_UNKNOWN |
+-----+------+-----------+---------+---------------+
