crates/psptool-ops/tests/snapshots/list_micro__list_default_psp_micro.snap
---
source: crates/psptool-ops/tests/list_micro.rs
expression: list_default(&rom)
---
+-----+------+-----------+---------+---------------+
| ROM | Addr |   Size    |   FET   |     AGESA     |
+-----+------+-----------+---------+---------------+
|  0  | 0x0  | 0x1000000 | 0x20000 | AGESA_UNKNOWN |
+-----+------+-----------+---------+---------------+

+--+-----------+---------+------------+-------+---------------------+
|  | Directory |  Addr   | Generation | Magic | Secondary Directory |
+--+-----------+---------+------------+-------+---------------------+
|  |     0     | 0xa7000 |            | $PSP  |                     |
+--+-----------+---------+------------+-------+---------------------+
+--+---+-------+---------+------+-------------------+------------+----------+----------+--------------+-----------+
|  |   | Entry | Address | Size |       Type        | Subprogram | Instance | Magic/ID | File Version | File Info |
+--+---+-------+---------+------+-------------------+------------+----------+----------+--------------+-----------+
|  |   |     0 |    0x20 | 0x10 | WRAPPED_IKEK~0x21 |          0 |        0 |          |              |           |
+--+---+-------+---------+------+-------------------+------------+----------+----------+--------------+-----------+
