crates/psptool-ops/tests/snapshots/list_micro__list_json_bhd_micro.snap
---
source: crates/psptool-ops/tests/list_micro.rs
expression: "list_json(&rom, false)"
---
[
  {
    "address": 684032,
    "directory": 0,
    "entries": [
      {
        "address": 40,
        "index": 0,
        "info": [],
        "magic": "",
        "sectionType": "BIOS",
        "size": 16,
        "version": ""
      }
    ],
    "magic": "$BHD",
    "secondaryAddresses": []
  }
]
