crates/psptool-ops/tests/snapshots/list_micro__list_json_psp_micro.snap
---
source: crates/psptool-ops/tests/list_micro.rs
expression: "list_json(&rom, false)"
---
[
  {
    "address": 684032,
    "directory": 0,
    "entries": [
      {
        "address": 32,
        "index": 0,
        "info": [],
        "magic": "",
        "sectionType": "WRAPPED_IKEK~0x21",
        "size": 16,
        "version": ""
      }
    ],
    "magic": "$PSP",
    "secondaryAddresses": []
  }
]
