crates/psptool-ops/tests/snapshots/list_micro__list_verbose_psp_micro.snap
---
source: crates/psptool-ops/tests/list_micro.rs
expression: list_verbose(&rom)
---
+-----+------+-----------+---------+---------------+
| ROM | Addr |   Size    |   FET   |     AGESA     |
+-----+------+-----------+---------+---------------+
|  0  | 0x0  | 0x1000000 | 0x20000 | AGESA_UNKNOWN |
+-----+------+-----------+---------+---------------+

+--+-----------+---------+------------+-------+---------------------+
|  | Directory |  Addr   | Generation | Magic | Secondary Directory |
+--+-----------+---------+------------+-------+---------------------+
|  |     0     | 0xa7000 |            | $PSP  |                     |
+--+-----------+---------+------------+-------+---------------------+
+--+---+-------+---------+------+-------------------+------------+----------+----------+--------------+-----------+-------+----------------------------------+-------------+-----------+-------------+-----------+
|  |   | Entry | Address | Size |       Type        | Subprogram | Instance | Magic/ID | File Version | File Info | flags |               MD5                | size_signed | size_full | size_packed | load_addr |
+--+---+-------+---------+------+-------------------+------------+----------+----------+--------------+-----------+-------+----------------------------------+-------------+-----------+-------------+-----------+
|  |   |     0 |    0x20 | 0x10 | WRAPPED_IKEK~0x21 |          0 |        0 |          |              |           |   0x0 | 4ae71336e44bf9bf79d2752e234818a5 |             |           |             |           |
+--+---+-------+---------+------+-------------------+------------+----------+----------+--------------+-----------+-------+----------------------------------+-------------+-----------+-------------+-----------+
